# codenotes

./: README.md
algo-c++/: configs.pri  solutions.pro
algo-competition/: configs.pri  solutions.pro
books/: net.books
chrome/: bookmarks_5_16_19.html
coder.self-discipline/: readme.txt
cpp-language/: solutions.pro
datastruct/: Makefile  README.md  common.h  linklist-1.c  linklist-bi-1.c  seqlist-1.c
designmode/: AbstractFactory-1  AbstractFactory-1.cpp  Actor-ChainOfResponsibility-1.cpp  Actor-Command-1.cpp  Actor-Interpreter-1.cpp  Actor-Iterator-1.cpp  Actor-Mediator-1.cpp  Actor-Memento-1.cpp  Actor-Observer-1.cpp  Actor-State-1.cpp  Actor-Strategy-1.cpp  Actor-TemplateMethod-1.cpp  Actor-Vistor-1.cpp  Builder-1  Builder-1.cpp  Builder-1.cpp.ill  FactoryMethod-1  FactoryMethod-1.cpp  FactoryMethod-1.cpp.E  FactoryMethodSimple-1  FactoryMethodSimple-1.cpp  Makefile  Prototype-1  Prototype-1.cpp  Singleton-1  Singleton-1.cpp  Struct-Adapter.cpp  Struct-Bridge-1.cpp  Struct-Composite-1.cpp  Struct-Decorator-1.cpp  Struct-Facade-1.cpp  Struct-Flyweight-1.cpp  Struct-Proxy-1.cpp  compile.sh  readme.txt  run.sh
doxygen/: readme.txt
linux/: notes
linux/algorithms/algo4/: .gdb_history  CMakeCache.txt  CMakeLists.txt  Makefile  avltree.c  bcc.c  bfs.c  bm.c  bm2.c  btree_mktree_byorder.c  btree_traserval.c  btree_traversal.c  check-kr.c  cmake_install.cmake  common.h  dp-01pkg.c  dp-01pkg1.txt  dp-01pkg2.txt  dp-digittower.c  dp-digittower1.txt  dp-infpkg.c  dp-lcs.c  dp-lcs1.txt  dp-mpkg.c  exec-1-1-27.c  fermat-lagrange.c  gdb.txt  graph-mst.c  graph-mst1.txt  graph-prio.c  graph-prio1.txt  graph.c  heap-data1.txt  heap.c  kmp-dfa.c  kmp.c  kr.c  leftheap.c  nqueue.c  prim_encrypt.c  (+18 more)
linux/algorithms/training/: CMakeCache.txt  CMakeLists.txt  Makefile  bigfloat.c  bigint.c  cmake_install.cmake
mysql/: selectcourse.sql
node/: inherit.js  objcreate.js  proto.js
notes/: notes.txt
python/: test.py
qdoc/: readme.txt
qtcreator_src/: readme.txt  (+7 more)
(+1207 files in other folders)
