project(Algo4)

set(EXECUTABLE_OUTPUT_PATH ./bin)

add_executable(str_brute1 str_brute1.c)
add_executable(str_brute2 str_brute2.c)
add_executable(avltree avltree.c)
add_executable(splaytree splaytree.c)
add_executable(searchtree searchtree.c)
add_executable(mktree btree_mktree_byorder.c)
add_executable(kmp kmp.c)

